added junit info